# sora-2-marketing

./: README.md  pyproject.toml  run.py  setup.cfg
output/: latest_prompt.json  latest_prompt.txt
src/tradingwizard_ai_prompt/: __init__.py  __main__.py  analyzer.py  fetchers.py  main.py  script_builder.py
